# on-policy-interp

./: .gitignore  FINDINGS.md  README.md  pyproject.toml  requirements.txt  research_outline.md  setup_venv.sh
analysis/: __init__.py  handoff.py  make_figures.py  matched_perf.py  synthesize.py
data/: build_corpus_sft.py  build_prompt_pool.py  generate_teacher_traces.py  match_datasets.py  merge_shards.py
eval/: __init__.py  behavioral.py  common.py  diversity.py  forgetting.py  general_text.py  param_drift.py
mech/: __init__.py  activation_patching.py  extract_activations.py  head_path_patching.py  probe.py  probe_transfer.py
results/: README.md  handoff.json  probe_transfer.json  probe_transfer_s1.json  probe_transfer_s2.json  synthesis.json  synthesis_3seed.json
results/behavioral/: base.json  base12b.json  corpus_sft12b_seed0.json  corpus_sft12b_seed1.json  corpus_sft12b_seed2.json  corpus_sft_ckpt_100.json  corpus_sft_seed0_ckpt_100.json  corpus_sft_seed0_matched.json  corpus_sft_seed1_ckpt_100.json  corpus_sft_seed1_matched.json  corpus_sft_seed2_ckpt_100.json  corpus_sft_seed2_matched.json  onpolicy_kd_ckpt_100.json  onpolicy_kd_seed0_ckpt_100.json  relax12b_moresft.json  (+33 more)
scripts/: README.md  eval_all.sh  mech_all.sh  run_data.sh  run_matched.sh  run_relax.sh  run_relax12b.sh  run_relax_eval.sh  run_relax_longitudinal.sh  run_relax_multi.sh  run_sd12b.sh  run_sd12b_eval.sh  run_sd12b_eval_v2.sh  run_sd12b_fkl.sh  run_sd12b_v2.sh  run_temp_sweep.sh  train_all.sh
tests/: test_core.py
training/: __init__.py  common.py  config.py  online.py  train.py
(+208 files in other folders)
