[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opi"
version = "0.1.0"
description = "On-policy distillation vs static SFT: a mechanistic study of planning-site formation in rhyming-couplet generation"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
